kubernetes/database-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: workout-db
  labels:
    app: workout-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: workout-db
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: workout-db
    spec:
      containers:
      - name: mysql
        image: mysql:8.0
        ports:
        - containerPort: 3306
        volumeMounts:
        - name: mysql-persistent-storage
          mountPath: /var/lib/mysql
        resources:
          limits:
            cpu: "1000m"
            memory: "1Gi"
          requests:
            cpu: "500m"
            memory: "512Mi"
      volumes:
      - name: mysql-persistent-storage
        persistentVolumeClaim:
          claimName: mysql-pvc
