kubernetes/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: workout-app
spec:
  selector:
    app: workout-app
  ports:
  - port: 80
    targetPort: 8000
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: workout-app-external
spec:
  selector:
    app: workout-app
  ports:
  - port: 80
    targetPort: 8000
  type: LoadBalancer
